--- a/AddrBook/src/main/webapp/resources/css/addrbook.css
+++ b/AddrBook/src/main/webapp/resources/css/addrbook.css
@@ -13,7 +13,22 @@
 #tbl_list, td{border: 1px solid #ccc; border-collapse: collapse;}
 #tbl_list td{height: 40px;}
 
+/* 로그인 스타일*/
+#tbl_login{width: 400px; margin: 0 auto;}
+#tbl_login, td{border: 1px solid #ccc; border-collapse: collapse;}
+#tbl_login td{height: 50px;}
+#tbl_login input[type="text"]{height:25px;}
+#tbl_login td:nth-child(1){width: 100px;}
+
 /* 상세 보기 스타일*/
 #tbl_view{width: 400px; margin: 0 auto;}
 #tbl_view, td{border: 1px solid #ccc; border-collapse: collapse;}
 #tbl_view td{height: 40px;}
+
+
+
+
+
+
+
+
