--- a/MemberBoard/src/main/webapp/resources/css/common.css
+++ b/MemberBoard/src/main/webapp/resources/css/common.css
@@ -4,6 +4,7 @@
 li{list-style: none;}
 a{text-decoration: none; color: #000;}
 input[type="text"], [type="password"]{width: 200px; height:25px;}
+input[type="submit"], [type="reset"], [type="button"]{width:60px; height:30px; margin: 0 3px;}
 
 /* navbar 스타일 */
 nav{margin-top: 20px; text-align: right; margin-right: 100px;}
@@ -24,14 +25,15 @@ footer{ margin-left: 20%; margin-top: 5%}
 .tbl_list, .tbl_write, .tbl_bo_view{width: 700px; margin: 0 auto;} 
 .tbl_list, th, td{border: 1px solid #ccc; border-collapse: collapse; padding: 10px;}
 .tbl_list thead{background: #eee;} 
+/*.tbl_list div.pageList{height: 200px; text-align: center; margin: 20px;}*/
+.tbl_list p{padding: 10px;}
 .tbl_write .w_title{width: 650px; height: 25px;}
 .tbl_write textarea{width: 650px;}
 .writeBtn{height: 40px; text-align: right; margin-right: 28%;}
 .writeBtn button{margin-top: 20px; width: 80px; height: 35px;}
 .tbl_bo_view, th, td{border: 1px solid #ccc; border-collapse: collapse; padding: 10px;}
 .tbl_bo_view td:nth-child(1){width:100px; background: #eee}
-.tbl_bo_view input{width: 550px;}
-.tbl_bo_view input[type="submit"], input[type="button"]{width:60px; height:30px; margin: 0 3px;}
+.tbl_bo_view .view_text{width: 550px;}
 
 
 
